Bug 282589 - Remember last directory for saving tracking data
Summary: Remember last directory for saving tracking data
Status: RESOLVED FIXED
Alias: None
Product: marble
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: 1.3 (KDE 4.8)
Assignee: marble-bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-09-22 22:50 UTC by Bernhard Beschow
Modified: 2011-09-22 22:54 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bernhard Beschow 2011-09-22 22:50:07 UTC
Version:           unspecified (using Devel) 
OS:                Linux

Marble should remember the last directory when saving tracking data.

Saving tracking data on the N900 to the home directory means that the saved track won't be accessible when the N900 is used as a mass storage device from another computer. To avoid this, a user has to navigate to the appropriate directory each time when saving a track, which is *highly* annoying.

Reproducible: Didn't try

Steps to Reproduce:
1) click "Save track"
2) navigate to some directory other than the home directory
3) save the track
4) restart Marble
5) click "Save track"

Actual Results:  
the current directory is the home directory

Expected Results:  
the current directory matches the one where the last track was saved
Comment 1 Bernhard Beschow 2011-09-22 22:54:42 UTC
Git commit efcb6cb757379963170eac89f3c1f9b451d1cbe8 by Bernhard Beschow.
Committed on 22/09/2011 at 21:55.
Pushed by beschow into branch 'master'.

CurrentLocationWidget: remember last paths when saving/opening a track across Marble sessions

BUG: 282589

M  +4    -0    src/QtMainWindow.cpp
M  +27   -6    src/lib/CurrentLocationWidget.cpp
M  +8    -0    src/lib/CurrentLocationWidget.h

http://commits.kde.org/marble/efcb6cb757379963170eac89f3c1f9b451d1cbe8