CurrentLocationWidget: remember last paths when saving/opening a track across Marble sessions

BUG: 282589